2008-08-19 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b138
 
 * CHANGE: Removed the docs/ folder as its totally outdated for 1.6

   Sorry Andrew.

2008-08-19 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b137

 * FIX *

 Application Account Lockout not Enforced
 Issue Overview
 Account lockouts are not enforced over accounts once an excessive number of
 failed login attempts have been made.
 This significantly increases the chances of application compromise via automated
 brute force password guessing attacks.

 After a configurable number of wront login attemps a user(name) is locked.
 
 - New class: Logins()

 - New functions:
	unsafe_serialize($obj, $file)

 * Other fixes *

 Forgot an icon in b136

 Forgot a change for b130 tooltips and progressbar.

2008-08-19 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b136

 * Fix *

 Logout Option not Available on all Application Pages.

2008-08-18 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b135

 * Security Fix *

 Inadequate Application Error Handling and Suppression
 Issue Overview
 Detailed error messages often result from unhandled or unexpected exceptions
 within application code.

 -- Other fixes --

 * Fix: forget to adust JS in imagemap.php

 * Fix: Make Imagemap textarea compatible with phpNuke.

 * Change: Need to have constant LOAD_SESSIONS set before loading gallery
           session code.

2008-08-17 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b134

 * Security Fix *

 New Password Functionality Susceptible to Brute Force Attacks
 Issue Overview
 The new password functionality generates a one-time password hash value that
 is comprised of the first 5 characters returned
 by the PHP md5 function and is derived from the user's current password and
 the current system timestamp. This weak
 character composition (valid HEX characters, ie A-F and 0-9) and possibility
 for duplicate password hashes (due to password
 requests at the same time and duplicate current password values) exposes the
 application to remote unauthenticated