@@ -104,9 +104,15 @@ if(!includeTemplate('navphoto.tpl')) {
 		$goto = '';
 	}
 
+	if($navc < 2) {
+		$id = 'g-navtable';
+	}
+	else {
+		$id = 'g-navtable-bottom';
+	}
 ?>
 <!-- 'Classic' Photo Navigator -->
-<table cellspacing="0" cellpadding="0" id="g-navtable" dir="<?php echo $gallery->direction; ?>">
+<table cellspacing="0" cellpadding="0" id="<?php echo $id; ?>" dir="<?php echo $gallery->direction; ?>">
 <tr>
 	<td class="<?php echo $pClass ?>" width="25" height="18"><?php echo $fpContent ?></td>
 	<td class="<?php echo $pClass ?>" width="25" height="18"><?php echo $ppContent ?></td>
@@ -118,7 +124,7 @@ if(!includeTemplate('navphoto.tpl')) {
 </table>
 <?php
 	if($navc < 2 && $gallery->app->comments_addType != "inside") {
-		echo '<script type="text/javascript" src="'. $gallery->app->photoAlbumURL ."/js/arrowkey_nav.js\"></script>\n";
+		echo jsHtml('arrowkey_nav.js');
 	}
 }
 ?>
