@@ -1,3 +1,15 @@
+2008-08-19 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b139
+
+ * Change: Some layout changes to make it easier to use 1.5.x skins.
+
+ * Change: HTML fix for navigation, added separate css class for bottom nav.
+
+ * Fix: CSS fix for microthumb navigation.
+
+ * Fix: Added CSS link in phpBB2 integration.
+
+ * Change: Added more informative message in validate_albums.
+
 2008-08-19 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b138
  
  * CHANGE: Removed the docs/ folder as its totally outdated for 1.6
